--- a/LeoU-Portfollio/index.html
+++ b/LeoU-Portfollio/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href=".\src\images\MHicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Author: Mohamed Hamdy , Website: Personal Portfolio "
+    />
+    <title>Mohamed Hamdy</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="!p-[0.3rem] sm:!p-8"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
